--- a/test/fixtures/lesson_vocas.yml
+++ b/test/fixtures/lesson_vocas.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
-  password: MyString
+  lesson_id: 1
+  vocabulary_id: 1
 
 two:
-  name: MyString
-  password: MyString
+  lesson_id: 1
+  vocabulary_id: 1
