--- a/test/fixtures/lessons.yml
+++ b/test/fixtures/lessons.yml
@@ -1,9 +1,13 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
+  name: MyString
   content: MyString
+  video: MyString
   level: MyString
 
 two:
+  name: MyString
   content: MyString
+  video: MyString
   level: MyString
