--- a/test/fixtures/vocabularies.yml
+++ b/test/fixtures/vocabularies.yml
@@ -2,8 +2,8 @@
 
 one:
   name: MyString
-  password: MyString
+  definition: MyString
 
 two:
   name: MyString
-  password: MyString
+  definition: MyString
